image fixes for cumalitive layout shift

--- a/css/404.css
+++ b/css/404.css
@@ -19,6 +19,7 @@
   overflow: hidden;
   display: block;
   width: 100%;
+  height: auto;
 }
 
 
